# sa2-mod-downloader

./: .gitignore  Cargo.toml  flake.nix  mods.toml  rust-toolchain.toml
src/: config_schema.rs  download.rs  main.rs  modfile.rs  utils.rs
