[package]
name = "sa2_mod_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { version = "1.1.6", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
futures-util = "0.3.30"
indicatif = { version = "0.17.8" }
percent-encoding = "2.3.1"
quick-xml = { version = "0.31.0", features = ["async-tokio", "serialize"] }
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls", "stream"] }
reqwest-middleware = "0.3.0"
reqwest-retry = "0.5.0"
rust-ini = "0.21.0"
serde = { version = "1.0.197", features = ["derive"] }
sevenz-rust = { version = "0.6.0", features = ["zstd", "bzip2", "cbc"] }
sha2 = { version = "0.10.8", features = ["asm"] }
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.5.0"
zip = "1.1.0"
